@@ -1,32 +1,36 @@
 package mcjty.rftoolsbase.modules.various;
 
 import mcjty.lib.varia.ItemStackList;
+import mcjty.lib.varia.ItemStackTools;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.CompoundNBT;
 import net.minecraft.nbt.ListNBT;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.common.util.Constants;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
 public class FilterModuleCache {
     private boolean matchDamage = true;
-    private boolean oredictMode = false;
+    private boolean commonTagsMode = false;
     private boolean blacklistMode = true;
     private boolean nbtMode = false;
     private boolean modMode = false;
     private ItemStackList stacks;
-    private Set<Integer> oredictMatches = new HashSet<>();
+    private Set<ResourceLocation> tags = Collections.emptySet();
 
     // Parameter is the filter item.
     public FilterModuleCache(ItemStack stack) {
         CompoundNBT tagCompound = stack.getTag();
         if (tagCompound != null) {
             matchDamage = tagCompound.getBoolean("damageMode");
-            oredictMode = tagCompound.getBoolean("oredictMode");
+            commonTagsMode = tagCompound.getBoolean("commonTagMode");
             nbtMode = tagCompound.getBoolean("nbtMode");
             modMode = tagCompound.getBoolean("modMode");
             blacklistMode = "Black".equals(tagCompound.getString("blacklistMode"));
+            tags = new HashSet<>();
             ListNBT bufferTagList = tagCompound.getList("Items", Constants.NBT.TAG_COMPOUND);
             int cnt = 0;
             for (int i = 0 ; i < bufferTagList.size() ; i++) {
@@ -43,11 +47,8 @@ public class FilterModuleCache {
                 ItemStack s = ItemStack.read(nbtTagCompound);
                 if (!s.isEmpty()) {
                     stacks.set(cnt++, s);
-                    if (oredictMode) {
-// @todo 1.15 tags
-                        //                        for (int id : OreDictionary.getOreIDs(s)) {
-//                            oredictMatches.add(id);
-//                        }
+                    if (commonTagsMode) {
+                        ItemStackTools.addCommonTags(s.getItem().getTags(), tags);
                     }
                 }
             }
@@ -64,20 +65,18 @@ public class FilterModuleCache {
                 modName = stack.getItem().getRegistryName().getNamespace();
             }
 
-            if (oredictMode) {
-// @todo 1.15
-                //                int[] oreIDs = OreDictionary.getOreIDs(stack);
-//                if (oreIDs.length == 0) {
-//                    match = itemMatches(stack, modName);
-//                } else {
-//                    for (int id : oreIDs) {
-//                        if (oredictMatches.contains(id)) {
-//                            match = true;
-//                            break;
-//                        }
-//                    }
-//                }
-                match = itemMatches(stack, modName);
+            if (commonTagsMode) {
+                if (!tags.isEmpty()) {
+                    for (ResourceLocation tag : stack.getItem().getTags()) {
+                        if (tags.contains(tag)) {
+                            match = true;
+                            break;
+                        }
+                    }
+                }
+                if (!match) {
+                    match = itemMatches(stack, modName);
+                }
             } else {
                 match = itemMatches(stack, modName);
             }
